# brain-games

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  constants.py  consts.py  game.py  handlers.py  messages.py  messages_en.py  settings.py
brain_games/cli/: cli.py  game.py  game_controller.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/locale/: messages_en.py
brain_games/logic/: handlers.py  settings.py  utils.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
